# SLServiceList

./: .gitignore  README.md  models.py  pyproject.toml  services.py  urls.py  views.py
src/apps/cutter/: apps.py  services.py  views.py
src/apps/cutter/migrations/: 0001_initial.py
src/apps/qrcoder/: apps.py  services.py  views.py
src/config/: settings.py  urls.py
src/static/: organize_formats.js  update_qr.js
src/templates/: base.html  converter.html  cutter.html  header.html  index.html  message.html  qrcoder.html
src/templates/locale/en_us/LC_MESSAGES/: django.po
src/templates/locale/ru/LC_MESSAGES/: django.po
