[tool.poetry]
name = "slservicelist"
version = "0.1.0"
description = ""
authors = ["Sergey Kravchenko <g605413@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
pillow = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
